adding path to javascriptmas 15

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
       >Day 13 - Christmas Dinner Picker</a
     >
     <a href="./Day 14 Lonely Elf/index.html">Day 14 - Lonely Elf</a>
+    <a href="./Day 15 - Archery Target/index.html">Day 15 - Archery Target</a>
   </body>
 </html>
