--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
     >
     <a href="./Day 14 Lonely Elf/index.html">Day 14 - Lonely Elf</a>
     <a href="./Day 15 - Archery Target/index.html">Day 15 - Archery Target</a>
+    <a href="./Day 16- Naughty List, Nice List/index.html"
+      >Day 16 Naughty / Nice List</a
+    >
   </body>
 </html>
