adding day 17 of javascriptmas

--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
     <a href="./Day 16- Naughty List, Nice List/index.html"
       >Day 16 Naughty / Nice List</a
     >
+    <a href="./Day 17 - Word Carousel/index.html"
+      >Day 17 - CSS Image Carousel</a
+    >
   </body>
 </html>
