--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
     <a href="./Day 17 - Word Carousel/index.html"
       >Day 17 - CSS Image Carousel</a
     >
+    <a href="./Day 18 - AI Alt Text Generator/"
+      >Day 18 - Image Alt Text Generator</a
+    >
   </body>
 </html>
