--- a/Day 18 - AI Alt Text Generator/index.html
+++ b/Day 18 - AI Alt Text Generator/index.html
@@ -12,7 +12,7 @@
     </video>
     <p>
       Link to code:
-      <a href="" target="_blank">Day09 AI Christmas Card Genrator</a>
+      <a href="https://github.com/ianfrye0818/JavaScriptmas/tree/main/Day%2018%20-%20AI%20Alt%20Text%20Generator" target="_blank">Day 19 - AI Alt Text Generator</a>
     </p>
   </body>
 </html>
