--- a/index.html
+++ b/index.html
@@ -55,5 +55,8 @@
     <a href="./Day 18 - AI Alt Text Generator/"
       >Day 18 - Image Alt Text Generator</a
     >
+    <a href="./Day 19 - Debug Jingle Words/index.html"
+      >Day 19 - Debug Challenge</a
+    >
   </body>
 </html>
