--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
     <a href="./Day 19 - Debug Jingle Words/index.html"
       >Day 19 - Debug Challenge</a
     >
+    <a href="./Day 20 - Save Santa/index.html">Day 20 - Save Santa</a>
   </body>
 </html>
