--- a/index.html
+++ b/index.html
@@ -60,4 +60,5 @@
     >
     <a href="./Day 20 - Save Santa/index.html">Day 20 - Save Santa</a>
   </body>
+  <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
 </html>
