--- a/Day 21/index.html
+++ b/Day 21/index.html
@@ -24,12 +24,13 @@
         </p>
         <div class="input-container">
           <input
+            name="search"
             type="search"
             class="search-bar"
             id="search-field"
             placeholder="Search..."
           />
-          <label class="input-label">Search</label>
+          <label for="search" class="input-label">Search</label>
         </div>
         <img src="./images/day21.png" alt="Day 21 code results" />
       </div>
