--- a/Day 22/index.html
+++ b/Day 22/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Day 22</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <img id="main-img" src="./images/icon.png" />
+      <h1>Gift App</h1>
+      <form class="input-fields">
+        <input type="text" id="input-field" placeholder="Frode" />
+        <button id="add-button">→</button>
+      </form>
+      <ul id="people-list"></ul>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
