--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
       >Day 19 - Debug Challenge</a
     >
     <a href="./Day 20 - Save Santa/index.html">Day 20 - Save Santa</a>
+    <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
+    <a href="./Day 22/index.html">Day 22 - Gift App</a>
   </body>
-  <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
 </html>
