adding firebase version day 22

--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     <a href="./Day 20 - Save Santa/index.html">Day 20 - Save Santa</a>
     <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
     <a href="./Day 22/index.html">Day 22 - Gift App</a>
+    <a href="./Day 22 - 2/index.html">Day 22 - Gift App (Firebase Version)</a>
   </body>
 </html>
