--- a/Day 23/index.html
+++ b/Day 23/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day 22</title>
+    <link rel="stylesheet" href="./index.css" />
+    <title>Day 23 - Toggle Switch</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+
+      
+      <div class="toggle-container">
+        
+        <h1>Are you ready for Christmas?</h1>
+        <label class="toggle-switch">
+          <input type="checkbox" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <p>
+        Today's challenge was to build a css toggle switch that only uses css and
+        no javascript. The criteria was that it had to:
+        <ul>
+          <li>On click, toggle switch movese from one side to the other</li>
+          <li>Cursor becomes a pointer</li>
+          <li>Match Styles</li>
+          <li>No Javascript!!</li>
+        </ul>
+      </p>
+    </div>
+  </body>
 </html>
