--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
     <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
     <a href="./Day 22/index.html">Day 22 - Gift App</a>
     <a href="./Day 22 - 2/index.html">Day 22 - Gift App (Firebase Version)</a>
+    <a href="./Day 23/index.html">Day 23 - Toggle Switch</a>
   </body>
 </html>
