adding code snippet

--- a/Day 23/index.html
+++ b/Day 23/index.html
@@ -7,7 +7,7 @@
     <title>Day 23 - Toggle Switch</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
 
       
       <div class="toggle-container">
@@ -28,6 +28,7 @@
           <li>No Javascript!!</li>
         </ul>
       </p>
-    </div>
+      <img src="./images/day 23.png" alt="day 23 solution">
+    </main>
   </body>
 </html>
