--- a/Day 24/index.html
+++ b/Day 24/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day 21</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <title>Day 24 - Christmas Tree Lights Sequencer</title>
+    <link rel="stylesheet" href="index.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <p>
+        Today's challenge was to make the lights turn on and off on the
+        Christmas tree using JavaScript. Stetch goals included having the lights
+        turn on and off alternativly. This was a great challenge to finish up
+        JavaScriptmas!
+      </p>
+      <section>
+        <img src="./images/tree1.png" alt="christmas tree" />
+        <div class="star">⭐️</div>
+        <div class="lights red"></div>
+        <div class="lights blue"></div>
+        <div class="lights blue"></div>
+        <div class="lights red"></div>
+        <div class="lights red"></div>
+        <div class="lights blue"></div>
+        <div class="lights blue"></div>
+        <div class="lights red"></div>
+        <div class="lights red"></div>
+        <div class="lights blue"></div>
+        <div class="lights red"></div>
+        <div class="lights blue"></div>
+      </section>
+    </main>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
