--- a/index.html
+++ b/index.html
@@ -63,5 +63,6 @@
     <a href="./Day 22/index.html">Day 22 - Gift App</a>
     <a href="./Day 22 - 2/index.html">Day 22 - Gift App (Firebase Version)</a>
     <a href="./Day 23/index.html">Day 23 - Toggle Switch</a>
+    <a href="./Day 24/index.html">Day 24 - Christmas Tree Lights</a>
   </body>
 </html>
