--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="styles.css"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -21,10 +27,14 @@
       sizes="16x16"
       href="./images/favicon/favicon-16x16.png"
     />
-    <link rel="manifest" href="./images/favicon/site.webmanifest" />
+    <link
+      rel="manifest"
+      href="./images/favicon/site.webmanifest"
+    />
     <title>JavaScriptmas 2023</title>
   </head>
   <body>
+    <h1>JavaScriptmas 2024</h1>
     <a href="./01 - ChristmasCountDown/">Day 1 - Christmas Countdown</a>
     <a href="./02 - Styled Button/">Day 2 - Hover Button Effect</a>
     <a href="./03 - Divide Candy/">Day 3 - Divide Candy</a>
@@ -33,36 +43,26 @@
     <a href="./06 - Secret Santa/">Day 6 - Secret Santa Shuffler</a>
     <a href="./07 - Santa Wish LIst/">Day 7 - Santa Wish List</a>
     <a href="./08 - Animated Progress Bar/">Day 8 - Animated Loading Bar</a>
-    <a href="./09 - AI Generated Christmas Card/"
-      >Day 9 - AI Generated Christmas Card</a
-    >
+    <a href="./09 - AI Generated Christmas Card/">Day 9 - AI Generated Christmas Card</a>
     <a href="./10 - Rockin Around/">Day 10 - Rockin' Around</a>
-    <a href="./Day 11 - Swiss Flag CSS Challenge/"
-      >Day 11 - Swiss Flag CSS Challenge</a
-    >
+    <a href="./Day 11 - Swiss Flag CSS Challenge/">Day 11 - Swiss Flag CSS Challenge</a>
     <a href="./Day 12 - Santa's Gift Sorter/">Day 12 - Santa's Gift Sorter</a>
-    <a href="./Day 13 - Christmas Dinner Picker/"
-      >Day 13 - Christmas Dinner Picker</a
-    >
+    <a href="./Day 13 - Christmas Dinner Picker/">Day 13 - Christmas Dinner Picker</a>
     <a href="./Day 14 Lonely Elf/index.html">Day 14 - Lonely Elf</a>
     <a href="./Day 15 - Archery Target/index.html">Day 15 - Archery Target</a>
-    <a href="./Day 16- Naughty List, Nice List/index.html"
-      >Day 16 Naughty / Nice List</a
-    >
-    <a href="./Day 17 - Word Carousel/index.html"
-      >Day 17 - CSS Image Carousel</a
-    >
-    <a href="./Day 18 - AI Alt Text Generator/"
-      >Day 18 - Image Alt Text Generator</a
-    >
-    <a href="./Day 19 - Debug Jingle Words/index.html"
-      >Day 19 - Debug Challenge</a
-    >
+    <a href="./Day 16- Naughty List, Nice List/index.html">Day 16 Naughty / Nice List</a>
+    <a href="./Day 17 - Word Carousel/index.html">Day 17 - CSS Image Carousel</a>
+    <a href="./Day 18 - AI Alt Text Generator/">Day 18 - Image Alt Text Generator</a>
+    <a href="./Day 19 - Debug Jingle Words/index.html">Day 19 - Debug Challenge</a>
     <a href="./Day 20 - Save Santa/index.html">Day 20 - Save Santa</a>
     <a href="./Day 21/index.html">Day 21 - Expanding Search Bar</a>
     <a href="./Day 22/index.html">Day 22 - Gift App</a>
     <a href="./Day 22 - 2/index.html">Day 22 - Gift App (Firebase Version)</a>
     <a href="./Day 23/index.html">Day 23 - Toggle Switch</a>
     <a href="./Day 24/index.html">Day 24 - Christmas Tree Lights</a>
+    <hr />
+    <h1>JavaScriptmas 2024</h1>
+    <a href="./2024/01- Grandpas Gift List/">Day 1 - Grandpa's Gift List</a>
+    <a href="./2024/02 - Ugly Advent Calendar/index.html">Day 2 - Ugly Advent Calendar</a>
   </body>
 </html>
